[package]
name = "tracing_check"
version = "0.1.5"
edition = "2021"
description = "A comprehensive health check and validation library for distributed systems"
readme = "README.md"
license = "MIT"
repository = "https://github.com/gelstend/tracing_check"
homepage = "https://github.com/gelstend/tracing_check"
keywords = ["rpc", "health-check", "validation", "distributed-systems"]
categories = ["network-programming", "development-tools"]
authors = ["dayago8466@pazuric.com"]

[dependencies]
tokio = { version = "1", features = ["time", "rt-multi-thread", "process"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
